# remarkable-obsidian-ore

./: .gitignore  Cargo.toml  trackingFiles.json
Obsidian/test/: 927d41b7-f128-4300-ba0d-fc4031a140c2.content  927d41b7-f128-4300-ba0d-fc4031a140c2.metadata
Obsidian/test/927d41b7-f128-4300-ba0d-fc4031a140c2/: aab71bda-ac48-4f0a-8392-f0e8776a3541.rm
Obsidian/test23/: 5fa71518-4752-42b4-a78e-aedc4b38b5da.content  5fa71518-4752-42b4-a78e-aedc4b38b5da.metadata
Obsidian/test23/5fa71518-4752-42b4-a78e-aedc4b38b5da/: 0b457dcb-d59d-4ca9-aa49-3e27d76531b9.rm
src/: main.rs
src/bash/: getUpdates.sh  openZipAndConvert.sh
