[package]
name = "remarkable-obsidian-ore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"  # Use the latest version available
async-std = { version = "1.10", features = ["attributes"] }
sha2 = "0.10"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.5"

